src/test/deca/syntax/invalid/sansObjets/erreurCondition.deca
// Description:
//    tests de programme incorrect lexicalement (erreur dans la condition du if)
//
// Historique:
//    @DATE@

{
    float y = 5.8;

    if (y 9) {
        print("y is below 9");
    } else if (x == 9) {
        print("y equals 9");
    } else {
        print("y is above 9");
    }
}